objects/Employee_Status__c.object
<CustomObject>
    <fields>
        <fullName>Byte_3_Descirption__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Employee Status Description</inlineHelpText>
        <label>Byte 3 Descirption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Byte_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Employee Status Byte</inlineHelpText>
        <label>Byte 3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Location__r.Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Employee Status</relationshipLabel>
        <relationshipName>Employee_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location_Or_Division__c</referenceTo>
        <relationshipLabel>Employee Status</relationshipLabel>
        <relationshipName>Employee_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EMPL-{000000}</displayFormat>
        <label>Employee Status Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>